# libiconv_cmake

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  config-cmake.h.in  config.h.cmake.in  iconv-config.cmake.in
.github/workflows/: cmake.yml
cmake/: genaliases.cmake  gperf-static.cmake
